# actual_import

./: .gitignore  README.md  com.warriner.finance-narrative.plist  pyproject.toml  requirements.txt
config/: actual-budget.yaml  narrative.yaml
src/actual_budget_import/: __main__.py  config.py  dedup.py  fingerprint.py  formatter.py  importer.py  mapping.py  splitter.py  transfers.py
src/narrative/: __main__.py  actual_client.py  hledger_queries.py  report.py
tests/: conftest.py  test_dedup.py  test_fingerprint.py  test_formatter.py  test_importer.py  test_mapping.py  test_splitter.py  test_transfers.py
